cskg use case update of the text embedding

--- a/examples/CSKG Use Case.ipynb
+++ b/examples/CSKG Use Case.ipynb
@@ -158,20 +158,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 14184/14184 [33:19<00:00,  7.09it/s]\n"
+      "100%|██████████| 14184/14184 [19:55<00:00, 11.86it/s]\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "kgtk text_embedding --debug --embedding-projector-metadata-path none \\\n",
+    "kgtk text_embedding cskg_sample.tsv \\\n",
+    "                    --debug --embedding-projector-metadata-path none \\\n",
     "                    --embedding-projector-metadata-path none \\\n",
     "                    --label-properties \"/r/Synonym\" \\\n",
     "                    --isa-properties \"/r/IsA\" \\\n",
@@ -181,7 +182,8 @@
     "                    -f kgtk_format \\\n",
     "                    --output-format kgtk_format \\\n",
     "                    --use-cache \\\n",
-    "                    --model bert-large-nli-cls-token -i cskg_sample.tsv > cskg_embedings.txt"
+    "                    --model bert-large-nli-cls-token \\\n",
+    "                    > cskg_embedings.txt"
    ]
   },
   {
