Updated notebooks and files to operate locally

--- a/examples/CSKG Use Case.ipynb
+++ b/examples/CSKG Use Case.ipynb
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "kgtk graph_statistics --directed --degrees --pagerank --hits --log cskg_summary.txt cskg_sample.tsv > cskg_stats.tsv"
+    "kgtk graph_statistics --directed --degrees --pagerank --hits --summary cskg_summary.txt sample_data/cskg/cskg_sample.tsv > cskg_stats.tsv"
    ]
   },
   {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -61,13 +61,13 @@
      "text": [
       "wn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533\tvertex_in_degree\t0\twn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533-vertex_in_degree-128480\n",
       "wn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533\tvertex_out_degree\t1\twn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533-vertex_out_degree-128481\n",
-      "wn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533\tvertex_pagerank\t2.549315124598274e-05\twn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533-vertex_pagerank-128482\n",
+      "wn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533\tvertex_pagerank\t2.5493151245983973e-05\twn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533-vertex_pagerank-128482\n",
       "wn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533\tvertex_hubs\t0.0\twn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533-vertex_hubs-128483\n",
-      "wn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533\tvertex_auth\t2.9904158236518235e-249\twn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533-vertex_auth-128484\n",
+      "wn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533\tvertex_auth\t2.9904158236518527e-249\twn:zucchini.n.01+/c/en/zucchini/n/wn/plant+wd:Q7533-vertex_auth-128484\n",
       "/c/en/marrow/n/wn/plant+wn:marrow.n.02\tvertex_in_degree\t1\t/c/en/marrow/n/wn/plant+wn:marrow.n.02-vertex_in_degree-128485\n",
       "/c/en/marrow/n/wn/plant+wn:marrow.n.02\tvertex_out_degree\t0\t/c/en/marrow/n/wn/plant+wn:marrow.n.02-vertex_out_degree-128486\n",
-      "/c/en/marrow/n/wn/plant+wn:marrow.n.02\tvertex_pagerank\t4.716231030577361e-05\t/c/en/marrow/n/wn/plant+wn:marrow.n.02-vertex_pagerank-128487\n",
-      "/c/en/marrow/n/wn/plant+wn:marrow.n.02\tvertex_hubs\t9.592664809864095e-248\t/c/en/marrow/n/wn/plant+wn:marrow.n.02-vertex_hubs-128488\n",
+      "/c/en/marrow/n/wn/plant+wn:marrow.n.02\tvertex_pagerank\t4.7162310305776544e-05\t/c/en/marrow/n/wn/plant+wn:marrow.n.02-vertex_pagerank-128487\n",
+      "/c/en/marrow/n/wn/plant+wn:marrow.n.02\tvertex_hubs\t9.592664809864673e-248\t/c/en/marrow/n/wn/plant+wn:marrow.n.02-vertex_hubs-128488\n",
       "/c/en/marrow/n/wn/plant+wn:marrow.n.02\tvertex_auth\t0.0\t/c/en/marrow/n/wn/plant+wn:marrow.n.02-vertex_auth-128489\n"
      ]
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -158,20 +158,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 14184/14184 [19:55<00:00, 11.86it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
-    "kgtk text_embedding cskg_sample.tsv \\\n",
+    "kgtk text_embedding sample_data/cskg/cskg_sample.tsv \\\n",
     "                    --debug --embedding-projector-metadata-path none \\\n",
     "                    --embedding-projector-metadata-path none \\\n",
     "                    --label-properties \"/r/Synonym\" \\\n",
@@ -210,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
