Update CSKG Use Case.ipynb
I added a warning on a step that takes a significant amount of time

--- a/examples/CSKG Use Case.ipynb
+++ b/examples/CSKG Use Case.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another common operation is computing BERT-large embeddings over CSKG knowledge. Here is how:"
+    "Another common operation is computing BERT-large embeddings over CSKG knowledge. Here is how:\n",
+    "\n",
+    "**Note**: This may take a significant amount of time (10-15 min)"
    ]
   },
   {
