--- a/examples/CSKG Use Case.ipynb
+++ b/examples/CSKG Use Case.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "kgtk graph_statistics --directed --degrees --pagerank --hits --summary cskg_summary.txt sample_data/cskg/cskg_sample.tsv > cskg_stats.tsv"
+    "kgtk graph_statistics --directed --degrees --pagerank --hits --log cskg_summary.txt sample_data/cskg/cskg_sample.tsv > cskg_stats.tsv"
    ]
   },
   {
