CSKG notebook text update

--- a/examples/CSKG Use Case.ipynb
+++ b/examples/CSKG Use Case.ipynb
@@ -6,20 +6,9 @@
    "source": [
     "# CSKG use case\n",
     "\n",
-    "In this notebook, we will *compute statistics and embeddings over a 0.1% random sample of our Commonsense Knowledge Graph (CSKG).* \n",
+    "In this notebook, we will *compute statistics and embeddings over a 0.1% random sample (`cskg_sample.tsv`) of our Commonsense Knowledge Graph (CSKG).* \n",
     "\n",
-    "This sample contains 17,234 edges.\n",
-    "\n",
-    "## Preparation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As a preparation for this notebook:\n",
-    "* please download a subset of the CSKG graph provided [here](https://drive.google.com/file/d/14rDtnklGF2fH23-GJDWAS7pKc88UFvHw/view?usp=sharing)\n",
-    "* place it in the same directory as this notebook"
+    "This sample contains 17,234 edges."
    ]
   },
   {
@@ -204,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
