--- a/examples/Example3 - Reachability.ipynb
+++ b/examples/Example3 - Reachability.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Example Scenario 3: Reachable occupations for selected people in Wikidata\n",
     "\n",
-    "*Carol would like to combine two subsets of Wikidata: one containing all subclass relations, and the other containing occuppations for several notable people. The combined  file  needs to be sorted by subject, after which she would compute the set of reachable nodes for those people via the properties `occupation (P106)` or `subclass of (P279)`.*"
+    "*Carol would like to combine two subsets of Wikidata: one containing all subclass relations, and the other containing occuppations for several notable people. The combined  file  needs to be sorted by subject, after which she would compute the set of reachable nodes for those people via the properties `occupation (P106)` or `subclass of (P279)`.*\n",
+    "\n",
+    "**Note on the expected running time:** Running this notebook takes around 1.5 hours on a Macbook Pro laptop with MacOS Catalina 10.15, a 2.3 GHz 8-Core Intel Core i9 processor, and 64 GB 2667 MHz DDR4 memory."
    ]
   },
   {
