--- a/examples/Example2 - Curation and Statistics.ipynb
+++ b/examples/Example2 - Curation and Statistics.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Example Scenario 2: Validation and statistics on a subset of Wikidata\n",
     "\n",
-    "*Bob wants to extract a subset of Wikidata with the `member of (P463)` property, clean it, remove irrelevant columns (for this task), and compute its statistics, including centrality metrics.*"
+    "*Bob wants to extract a subset of Wikidata with the `member of (P463)` property, clean it, remove irrelevant columns (for this task), and compute its statistics, including centrality metrics.*\n",
+    "\n",
+    "**Note on the expected running time:** Running this notebook takes under an hour on a Macbook Pro laptop with MacOS Catalina 10.15, a 2.3 GHz 8-Core Intel Core i9 processor, and 64 GB 2667 MHz DDR4 memory."
    ]
   },
   {
