example notebooks - updated environment details

--- a/examples/CSKG Use Case.ipynb
+++ b/examples/CSKG Use Case.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "This sample contains 17,234 edges.\n",
     "\n",
-    "**Note on the expected running time:** Running this notebook takes around 10 minutes on a Macbook Pro laptop with MacOS Catalina 10.15, a 2.3 GHz 8-Core Intel Core i9 processor, and 64 GB 2667 MHz DDR4 memory."
+    "**Note on the expected running time:** Running this notebook takes around 10 minutes on a Macbook Pro laptop with MacOS Catalina 10.15, a 2.3 GHz 8-Core Intel Core i9 processor, 2TB SSD disk, and 64 GB 2667 MHz DDR4 memory."
    ]
   },
   {
