--- a/examples/Example7 - Wikidata Outputs.ipynb
+++ b/examples/Example7 - Wikidata Outputs.ipynb
@@ -69,8 +69,11 @@
     }
    ],
    "source": [
-    "home = %env HOME\n",
-    "%env WIKIDATA_HOME=$home/Downloads/kypher\n",
+    "#home = %env HOME\n",
+    "# supply home from command line\n",
+    "# supply wiki_file from command line as well\n",
+    "# f_path from command line\n",
+    "%env WIKIDATA_HOME=$home/$f_path\n",
     "wikidata_home = %env WIKIDATA_HOME\n",
     "%env OUT = $wikidata_home/output\n",
     "%env TEMP = $wikidata_home/temp\n",
@@ -167,8 +170,8 @@
    ],
    "source": [
     "%env STORE=$wikidata_home/temp/wikidata.sqlite3.db\n",
-    "%env EDGES=$wikidata_home/all.10.tsv\n",
-    "%env EDGES=$wikidata_home/all.tsv\n",
+    "# %env EDGES=$wikidata_home/all.10.tsv\n",
+    "%env EDGES=$wikidata_home/$wiki_file\n",
     "\n",
     "#%env QUALS=$wikidata_home/wikidata-20200803-all-qualifiers.tsv.gz\n",
     "#%env LABELS=$wikidata_home/wikidata-20200803-all-labels-en-sorted.tsv.gz"
@@ -1666,9 +1669,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "kgtk_env",
    "language": "python",
-   "name": "python3"
+   "name": "kgtk_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1680,7 +1683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
