--- a/examples/Example7 - Wikidata Outputs.ipynb
+++ b/examples/Example7 - Wikidata Outputs.ipynb
@@ -15,7 +15,7 @@
     "Example batch command. The second argument is a notebook where the output will be stored. You can load it to see progress.\n",
     "\n",
     "```\n",
-    "papermill Example7\\ -\\ Wikidata\\ Outputs.ipynb exmaple7.out.ipynb \\\n",
+    "papermill Example7\\ -\\ Wikidata\\ Outputs.ipynb example7.out.ipynb \\\n",
     "-p home /Users/pedroszekely/Downloads/kypher \\\n",
     "-p wiki_file all.10.tsv.gz \\\n",
     "-p output_folder output.all.10 \\\n",
