--- a/examples/Example8 - Wikidata Subset.ipynb
+++ b/examples/Example8 - Wikidata Subset.ipynb
@@ -11,7 +11,7 @@
     "Parameters are set up in the first cell so that we can run this notebook in batch mode. Example invocation command:\n",
     "\n",
     "```\n",
-    "papermill Example8\\ -\\ Wikidata\\ Subset.ipynb exmaple8.out.ipynb \\\n",
+    "papermill Example8\\ -\\ Wikidata\\ Subset.ipynb example8.out.ipynb \\\n",
     "-p wikidata_home /Users/pedroszekely/Downloads/kypher \\\n",
     "-p wikidata_file all.10.tsv.gz \\\n",
     "-p wikidata_parts_folder /Users/pedroszekely/Downloads/kypher/output.all.10 \\\n",
