Added naming convention and removed the print(df) statement

--- a/examples/Example_9-Wikidata_Subset_Statistics_.ipynb
+++ b/examples/Example_9-Wikidata_Subset_Statistics_.ipynb
@@ -26,6 +26,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Naming Convention:\n",
+    "\n",
+    "## [subset_name].[section].[brief_description].tsv\n",
+    "\n",
+    "## subset_name \n",
+    "It is the qnode corresponding to the  wikidata subset, for example if the wikidata subset refers to the chemical compounds then “subset_name” is ”Q11173”\n",
+    "\n",
+    "## section \n",
+    "1. It is the section corresponding to the “Knowledge Graph Statistics” described above. For example if its class summary then it would be ‘1’. \n",
+    "\n",
+    "2. If there are more than one subsection for the main section then the subsection would be added after a dot(‘.’). For example ‘2.2’ corresponds to the ‘item properties’ under ‘Properties’. \n",
+    "\n",
+    "3. If there are more than one subsection to the parent subsection then the subsections would be recursively added after a dot(‘.’). For example while calculating the statistics of string for the section 2.6, it would be named 2.6.1\n",
+    "\n",
+    "## brief_description:\n",
+    "1. Its a brief description just after section \n",
+    "2. For class summary it’s ‘class_summary’\n",
+    "3. For ‘examples’ it’s the qnode for which 3 examples are shown\n",
+    "4. Its ‘property_summary_[type]’ for each of the data types in section 2.1.\n",
+    "5. Its ‘item_properties’ for section 2.3\n",
+    "6. Its ‘time_properties’ for section 2.4\n",
+    "7. Its ‘quantity_properties’ for section 2.5\n",
+    "8. Its ‘distincs_values_[type]’ for each of the type for section 2.6\n",
+    "9. Its ‘geo_coordinate_top_m’ for 2.7\n",
+    "10. Its ‘geo_shape_top_m’ for for 2.8\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "metadata": {
@@ -1409,25 +1440,6 @@
     "    df.to_csv(os.path.join(os.getenv('OUTPUT_FOLDER'),os.getenv('geo_shape_top_m')),sep='\\t',index=False)\n",
     "except Exception as e:\n",
     "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: [id, node1, label, node2]\n",
-      "Index: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df)"
    ]
   },
   {
