Update the jupyter noteboots for removal of positional file parameters.

--- a/examples/Example7 - Wikidata Outputs.ipynb
+++ b/examples/Example7 - Wikidata Outputs.ipynb
@@ -1066,7 +1066,7 @@
     }
    ],
    "source": [
-    "!$kgtk cat --mode NONE $TEMP/P31.n2.tsv.gz $TEMP/P279.n1.tsv.gz \\\n",
+    "!$kgtk cat --mode NONE -i $TEMP/P31.n2.tsv.gz $TEMP/P279.n1.tsv.gz \\\n",
     "    / compact --mode NONE --columns node \\\n",
     "    > $TEMP/P279.roots.tsv"
    ]
@@ -1096,7 +1096,7 @@
     "    --rootfile $TEMP/P279.roots.tsv \\\n",
     "    --rootfilecolumn 0 \\\n",
     "    --subj 1 --pred 2 --obj 3 \\\n",
-    "    $OUT/all.P279.tsv.gz \\\n",
+    "    -i $OUT/all.P279.tsv.gz \\\n",
     "    | kgtk sort2 \\\n",
     "    | gzip > $TEMP/P279.reachable.tsv.gz"
    ]
@@ -1238,7 +1238,7 @@
     }
    ],
    "source": [
-    "!$kgtk cat --mode NONE $TEMP/P279star.1.tsv.gz $TEMP/P279star.2.tsv.gz $TEMP/P279star.3.tsv.gz $TEMP/P279star.4.tsv.gz \\\n",
+    "!$kgtk cat --mode NONE -i $TEMP/P279star.1.tsv.gz $TEMP/P279star.2.tsv.gz $TEMP/P279star.3.tsv.gz $TEMP/P279star.4.tsv.gz \\\n",
     "    | kgtk compact \\\n",
     "    | kgtk sort2 \\\n",
     "    | kgtk add-id --id-style node1-label-node2-num \\\n",
@@ -1319,7 +1319,7 @@
     }
    ],
    "source": [
-    "!$kgtk cat $OUT/all.P31.tsv.gz $OUT/all.P279.tsv.gz \\\n",
+    "!$kgtk cat -i $OUT/all.P31.tsv.gz $OUT/all.P279.tsv.gz \\\n",
     "    | gzip > $TEMP/isa.1.tsv.gz"
    ]
   },
