--- a/examples/Example8 - Wikidata Subset.ipynb
+++ b/examples/Example8 - Wikidata Subset.ipynb
@@ -595,7 +595,7 @@
     "    --match 'P279star: (n1)-[l]->(n2), all_1: ()-[]->(n1)' \\\n",
     "    --return 'distinct l, n1 as node1, l.label, n2'\" \n",
     "\n",
-    "cat_command = \"$kgtk cat $TEMP/NAME.P279star.1.tsv.gz $TEMP/NAME.P279star.2.tsv.gz | gzip > $OUT/NAME.P279star.tsv.gz\"\n",
+    "cat_command = \"$kgtk cat -i $TEMP/NAME.P279star.1.tsv.gz $TEMP/NAME.P279star.2.tsv.gz | gzip > $OUT/NAME.P279star.tsv.gz\"\n",
     "\n",
     "run_command(command_node1)\n",
     "run_command(command_node2)\n",
@@ -625,7 +625,7 @@
     }
    ],
    "source": [
-    "!$kgtk cat $OUT/*.gz | gzip > $TEMP/$NAME.everything_1.tsv.gz"
+    "!$kgtk cat -i $OUT/*.gz | gzip > $TEMP/$NAME.everything_1.tsv.gz"
    ]
   },
   {
@@ -723,7 +723,7 @@
     }
    ],
    "source": [
-    "!$kgtk cat $OUT/*.gz | gzip > $TEMP/$NAME.everything_2.tsv.gz"
+    "!$kgtk cat -i $OUT/*.gz | gzip > $TEMP/$NAME.everything_2.tsv.gz"
    ]
   },
   {
@@ -773,7 +773,7 @@
       "[2020-09-30 11:56:02 sqlstore]: ANALYZE INDEX on table graph_34 column node2 ...\n",
       "        1.46 real         1.12 user         0.22 sys\n",
       "\n",
-      "kgtk cat $TEMP/Q5.label.*.gz | gzip > $OUT/Q5.label.en.tsv.gz\n",
+      "kgtk cat -i $TEMP/Q5.label.*.gz | gzip > $OUT/Q5.label.en.tsv.gz\n",
       "\n",
       "\n",
       "$kgtk query -i $TEMP/Q5.everything_2.tsv.gz -i $WIKIDATA_PARTS/part.alias.en.tsv.gz --graph-cache $STORE      -o $TEMP/Q5.alias.en.1.tsv.gz      --match 'everything_2: (n1)-[]->(), part: (n1)-[l]->(n2)'     --return 'distinct l, n1, l.label, n2'     --order-by 'n1, l.label, n2'\n",
@@ -827,7 +827,7 @@
       "---------------------------------------------\n",
       "        0.82 real         0.66 user         0.14 sys\n",
       "\n",
-      "kgtk cat $TEMP/Q5.description.*.gz | gzip > $OUT/Q5.description.en.tsv.gz\n",
+      "kgtk cat -i $TEMP/Q5.description.*.gz | gzip > $OUT/Q5.description.en.tsv.gz\n",
       "\n",
       "\n"
      ]
@@ -852,7 +852,7 @@
     "    --return 'distinct l, n1 as node1, l.label, n2' \\\n",
     "    --order-by 'n1, l.label, n2'\"\n",
     "\n",
-    "cat_command = \"kgtk cat $TEMP/NAME.LABEL.*.gz | gzip > $OUT/NAME.LABEL.en.tsv.gz\"\n",
+    "cat_command = \"kgtk cat -i $TEMP/NAME.LABEL.*.gz | gzip > $OUT/NAME.LABEL.en.tsv.gz\"\n",
     "\n",
     "for label in labels:\n",
     "    run_command(command_node1, {\"LABEL\": label})\n",
