--- a/examples/CSKG Use Case.ipynb
+++ b/examples/CSKG Use Case.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "kgtk graph_statistics --directed --degrees --pagerank --hits --log cskg_summary.txt sample_data/cskg/cskg_sample.tsv > cskg_stats.tsv"
+    "kgtk graph_statistics --directed --degrees --pagerank --hits --log cskg_summary.txt -i sample_data/cskg/cskg_sample.tsv > cskg_stats.tsv"
    ]
   },
   {
@@ -156,7 +156,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "kgtk text_embedding sample_data/cskg/cskg_sample.tsv \\\n",
+    "kgtk text_embedding -i sample_data/cskg/cskg_sample.tsv \\\n",
     "                    --debug --embedding-projector-metadata-path none \\\n",
     "                    --embedding-projector-metadata-path none \\\n",
     "                    --label-properties \"/r/Synonym\" \\\n",
