--- a/examples/Example1 - Embeddings.ipynb
+++ b/examples/Example1 - Embeddings.ipynb
@@ -76,10 +76,10 @@
    ],
    "source": [
     "%%bash\n",
-    "kgtk import_conceptnet --english_only conceptnet-assertions-5.7.0.csv / \\\n",
+    "kgtk import-conceptnet --english_only -i conceptnet-assertions-5.7.0.csv / \\\n",
     "            filter -p \" ; /r/Causes,/r/UsedFor,/r/Synonym,/r/DefinedAs,/r/IsA ; \" / sort -c 1,2,3 \\\n",
     "            | head -30000 |\n",
-    "            kgtk text_embedding --debug --embedding-projector-metadata-path none \\\n",
+    "            kgtk text-embedding --debug --embedding-projector-metadata-path none \\\n",
     "                    --embedding-projector-metadata-path none \\\n",
     "                    --label-properties \"/r/Synonym\" \\\n",
     "                    --isa-properties \"/r/IsA\" \\\n",
